# common-core-geometry

./: .gitignore  Cargo.toml  LICENSE  README.md  docs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs
crates/core/src/primitives/: aabb.rs  mod.rs  plane.rs  point.rs  sphere.rs  vector.rs
crates/core/src/svg/: projection.rs  renderer.rs
crates/core/src/utils/: mod.rs
crates/core/tests/: integration_tests.rs
crates/py/: Cargo.toml  README.md  pyproject.toml
crates/py/examples/: basic_usage.py  ray_casting.py  svg_rendering.py
crates/py/python/common_core_geometry/: __init__.pyi  svg.pyi
crates/py/src/: lib.rs  primitives.rs  svg.rs
crates/py/tests/: test_aabb.py  test_integration.py  test_line_segment.py  test_plane.py  test_point3d.py  test_ray.py  test_sphere.py  test_svg.py  test_triangle.py  test_vector3d.py
crates/wasm/: .gitignore  .npmignore  Cargo.toml  README.md  package.json
crates/wasm/examples/nodejs/: demo.js  svg_demo.js
crates/wasm/examples/web/: basic.html  index.html  ray_casting.html  svg_rendering.html
crates/wasm/src/: lib.rs
crates/wasm/src/primitives/: aabb.rs  line_segment.rs  mod.rs  plane.rs  point.rs  ray.rs  sphere.rs  triangle.rs  vector.rs
crates/wasm/src/svg/: camera.rs  mod.rs  renderer.rs
crates/wasm/src/utils/: error.rs
crates/wasm/tests/: primitives.test.js  svg.test.js
docs/: PLAN.md  PYTHON.md  SPEC.md  WASM.md  WORKSPACE.md
examples/: ray_casting.rs  svg_scene.rs
src/: lib.rs
src/operations/: distance.rs  intersection.rs  mod.rs  transform.rs
src/primitives/: line_segment.rs  plane.rs  point.rs  ray.rs  sphere.rs  triangle.rs
src/svg/: camera.rs  mod.rs
src/utils/: float.rs  mod.rs
