[workspace]
members = [
    "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/common-core-geometry"
homepage = "https://github.com/yourusername/common-core-geometry"

[workspace.dependencies]
common-core-geometry = { path = "crates/core" }
approx = "0.5"
