[workspace]
members = [
    "crates/core",
    "crates/py",
    "crates/wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/wykwit-tylko/common-core-geometry"
repository = "https://github.com/wykwit-tylko/common-core-geometry"

[workspace.dependencies]
common-core-geometry = { path = "crates/core" }
